--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ services:
   - docker
 
 script:
-  - export TAGSPACES_VERSION=$(curl https://api.github.com/repos/tagspaces/tagspaces/releases/latest --silent | jq .tag_name -r)
-  - docker build --build-arg TAGSPACES_VERSION . -t "joschi36/tagspaces:$(echo $TAGSPACES_VERSION)"
+  - docker build --build-arg TAGSPACES_VERSION="$(curl https://api.github.com/repos/tagspaces/tagspaces/releases/latest --silent | jq .tag_name -r)" . -t "joschi36/tagspaces:$(curl https://api.github.com/repos/tagspaces/tagspaces/releases/latest --silent | jq .tag_name -r)"
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push "joschi36/tagspaces:$(echo $TAGSPACES_VERSION)"
